--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   timeago: ^3.1.0
   awesome_dialog: ^2.1.0
   lottie: ^1.1.0
+  device_info: ^2.0.2
  
 dev_dependencies:
   flutter_test:
