--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   chewie: ^1.2.2
   video_player: ^2.1.10
   syncfusion_flutter_pdfviewer: ^19.2.48-beta
+  flutter_barcode_scanner: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
