--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_windowmanager: ^0.1.0
   firebase_core: ^1.4.0
   firebase_messaging: ^10.0.4
+  internet_connection_checker: ^0.0.1+2
+  flutter_phoenix: ^1.0.0
+  direct_link: ^0.1.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
