--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   device_info: ^2.0.2
   get_storage: ^2.0.2
   expansion_tile_card: ^2.0.0
-  youtube_player_flutter: ^8.0.0
   chewie: ^1.2.2
   video_player: ^2.1.10
   syncfusion_flutter_pdfviewer: ^19.2.48-beta
@@ -49,6 +48,8 @@ dependencies:
   internet_connection_checker: ^0.0.1+2
   flutter_phoenix: ^1.0.0
   direct_link: ^0.1.7
+  intl: ^0.17.0
+  translator: ^0.1.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
