--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.17.0
   translator: ^0.1.7
   pull_to_refresh: ^2.0.0
+  logger: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
